remove version from file names, refactor code into cleaner architecture, use lombok builder, fix vulnerabilities, use of constructor for better readability, add basic documentation, fix java version to 26